@@ -88,6 +88,51 @@ describe("when userinfo endpoint is not reachable", function()
   end)
 end)
 
+describe("when userinfo endpoint is slow but no timeout is configured", function()
+  test_support.start_server({
+    delay_response = { userinfo = 1000 },
+  })
+  teardown(test_support.stop_server)
+  local _, status = test_support.login()
+  it("login succeeds", function()
+    assert.are.equals(302, status)
+  end)
+end)
+
+describe("when userinfo endpoint is slow and a simple timeout is configured", function()
+  test_support.start_server({
+    delay_response = { userinfo = 1000 },
+    oidc_opts = {
+      timeout = 200
+    }
+  })
+  teardown(test_support.stop_server)
+  local _, status = test_support.login()
+  it("login succeeds", function()
+    assert.are.equals(302, status)
+  end)
+  it("an error has been logged", function()
+    assert.error_log_contains(".*error calling userinfo endpoint: accessing %(http://127.0.0.1/user%-info%) failed: timeout")
+  end)
+end)
+
+describe("when userinfo endpoint is slow and a table timeout is configured", function()
+  test_support.start_server({
+    delay_response = { userinfo = 1000 },
+    oidc_opts = {
+      timeout = { read = 200 }
+    }
+  })
+  teardown(test_support.stop_server)
+  local _, status = test_support.login()
+  it("login succeeds", function()
+    assert.are.equals(302, status)
+  end)
+  it("an error has been logged", function()
+    assert.error_log_contains(".*error calling userinfo endpoint: accessing %(http://127.0.0.1/user%-info%) failed: timeout")
+  end)
+end)
+
 describe("when userinfo endpoint sends a 4xx status", function()
   test_support.start_server({
     oidc_opts = {
